filled out the description to what the spec currently describes. placeholders for non-xml values that will need to be extracted another way. logging annotations for values that still need a little wrangling

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
 hg+https://bitbucket.org/lskibinski/et3/
 git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
+python-slugify==1.2.0
