added article json validation handling stubs

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 hg+https://bitbucket.org/lskibinski/et3/
 git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
 python-slugify==1.2.0
+jsonschema==2.5.1
