--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
-hg+https://bitbucket.org/lskibinski/et3/
+coverage==4.1
+et3==1.1
 #git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
 git+https://github.com/gnott/elife-tools.git@feature-body-back#egg=elifetools
-python-slugify==1.2.0
+green==2.5.0
 jsonschema==2.5.1
+pyflakes==1.3.0
+pylint==1.6.4
+python-slugify==1.2.0
