Fix box title if missing for now, to pass JSON schema checks. Also change over to use elife-tools develop branch.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 hg+https://bitbucket.org/lskibinski/et3/
 #git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
-git+https://github.com/gnott/elife-tools.git@feature-body-back#egg=elifetools
+git+https://github.com/elifesciences/elife-tools.git@develop#egg=elifetools
 python-slugify==1.2.0
 jsonschema==2.5.1
