--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 coverage==4.1
 et3==1.1
-#git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
-git+https://github.com/gnott/elife-tools.git@feature-body-back#egg=elifetools
+git+https://github.com/elifesciences/elife-tools.git@master#egg=elifetools
 green==2.5.0
 jsonschema==2.5.1
 pyflakes==1.3.0
