--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ green==2.5.0
 jsonschema==2.5.1
 pyflakes==1.3.0
 pylint==1.6.4
+python-json-logger==0.1.5
 python-slugify==1.2.0
 python-dateutil==2.5.3
 requests==2.11.1
