--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==4.1
 et3==1.2
 git+https://github.com/elifesciences/elife-tools.git@develop#egg=elifetools
 green==2.5.0
+joblib==0.10.3
 jsonschema==2.5.1
 pyflakes==1.3.0
 pylint==1.6.4
