--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-slugify==1.2.0
 python-dateutil==2.5.3
 requests==2.11.1
 requests-aws==0.1.8
+requests-cache==0.4.12
 newrelic==2.72.1.53
 pytz==2016.7
 strict-rfc3339==0.7
