--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==0.11.1
 Flask-Testing==0.6.1
 git+https://github.com/elifesciences/elife-tools.git@b99d4ec06efcf015586b93eb3d09092fca6f7ccc#egg=elifetools
 green==2.5.0
+isbnlib==3.6.5
 joblib==0.10.3
 jsonschema==2.5.1
 pyflakes==1.3.0
