--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,11 @@
 *~
 *.orig
 *.log
-venv/*
+venv/
 *.swp
 .coverage
 article-xml/
 article-json/
-article-json*/
 guinea-pigs/
 api-raml/
 htmlcov/
