Kitchen sink 00666 used in end2end fails validation
We do not test it here, but we should. If the version is incorrect, we need to update the version and then retest it.

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ app.cfg
 article-xml/
 article-json/
 guinea-pigs/
+kitchen-sinks/
 api-raml/
 htmlcov/
 elife-tools/
 src/elifetools
-glencoe-cache.sqlite3
+/*.sqlite3
