(much) better swagger validation

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coverage==4.1
 et3==1.4
 Flask==0.11.1
 Flask-Testing==0.6.1
+flex==6.10.0
 git+https://github.com/elifesciences/elife-tools.git@f613902879e0e1b7417d01a58a140af98f9a5a8e#egg=elifetools
 green==2.5.0
 isbnlib==3.6.5
@@ -21,5 +22,4 @@ requests-cache==0.4.12
 newrelic==2.72.1.53
 pytz==2016.7
 strict-rfc3339==0.7
-swagger-spec-validator==2.1.0
 rfc3339==5
