--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
 autopep8==1.2.4
 boto3==1.4.0
+connexion==1.1.10
 coverage==4.1
 et3==1.4
-Flask==0.11.1
-Flask-Testing==0.6.1
+Flask==0.12.2
+Flask-Testing==0.6.2
 flex==6.10.0
 git+https://github.com/elifesciences/elife-tools.git@f613902879e0e1b7417d01a58a140af98f9a5a8e#egg=elifetools
 green==2.5.0
 isbnlib==3.6.5
 joblib==0.10.3
 jsonschema==2.5.1
-pyflakes==1.3.0
+pyflakes==1.5.0
 pylint==1.6.4
 python-json-logger==0.1.5
 python-slugify==1.2.0
