upgraded deps. disabled a new (?) check pylint does that breaks on tuple unpacking

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,28 @@
-autopep8==1.2.4
-boto3==1.4.0
+autopep8==1.3.2
+boto3==1.4.4
 connexion==1.1.10
 coverage==4.1
-et3==1.4
+git+https://github.com/elifesciences/elife-tools.git@f788ca068195d561728e9687b69405d7d6aee589#egg=elifetools
+et3==1.5
 Flask==0.12.2
 Flask-Testing==0.6.2
-git+https://github.com/elifesciences/elife-tools.git@f788ca068195d561728e9687b69405d7d6aee589#egg=elifetools
-green==2.5.0
-isbnlib==3.6.5
-joblib==0.10.3
-jsonschema==2.5.1
+flex==6.10.0
+green==2.9.0
+isbnlib==3.7.2
+joblib==0.11
+jsonschema==2.6.0
+mock==2.0.0
+newrelic==2.86.3.70
 pyflakes==1.5.0
-pylint==1.6.4
-python-json-logger==0.1.5
-python-slugify==1.2.0
-python-dateutil==2.5.3
+pylint==1.7.2
+python-dateutil==2.6.0
+python-json-logger==0.1.7
+python-slugify==1.2.4
+pytz==2017.2
 PyYAML==3.12
-requests==2.11.1
+requests==2.18.1
 requests-aws==0.1.8
-requests-cache==0.4.12
-newrelic==2.72.1.53
-pytz==2016.7
+requests-cache==0.4.13
+rfc3339==5.2
 strict-rfc3339==0.7
-rfc3339==5
 uWSGI==2.0.15
