changed default cache file so iiif--prod doesn't get hammered

--- a/elife.cfg
+++ b/elife.cfg
@@ -2,8 +2,10 @@
 env: dev
 #upload_path uploads
 #cache_path: cache
+# this is not a good default. 
+# elife-libraries needs it's own app.cfg file
+# lax--ci needs it's own app.cfg file
+cache_path: /home/elife
 
 [lax]
 location: /srv/lax/
-# to be removed
-cache_path: /home/elife
