default settings for iiif endpoit

--- a/elife.cfg
+++ b/elife.cfg
@@ -3,6 +3,8 @@ env: dev
 #upload_path uploads
 # lax--ci needs it's own app.cfg file
 cache_path: /home/elife
+cdn_iiif: https://iiif.elifesciences.org/lax:
+iiif: https://prod--iiif.elifesciences.org/lax:
 
 [lax]
 location: /srv/lax/
