prod-- cdn_iiif correct path

--- a/elife.cfg
+++ b/elife.cfg
@@ -3,7 +3,7 @@ env: dev
 #upload_path uploads
 # lax--ci needs it's own app.cfg file
 cache_path: /home/elife
-cdn_iiif: https://iiif.elifesciences.org/lax:
+cdn_iiif: https://prod--cdn-iiif.elifesciences.org/lax:
 iiif: https://prod--iiif.elifesciences.org/lax:
 
 [lax]
