Config parser does not interpret single quotes as empty string

--- a/elife.cfg
+++ b/elife.cfg
@@ -8,7 +8,7 @@ cdn1: cdn.elifesciences.org/articles/
 
 # e.g. env_for_cdn: end2end- or
 #      env_for_cdn: continuumtest-
-env_for_cdn: ''
+env_for_cdn: 
 
 cdn_iiif: https://prod--cdn-iiif.elifesciences.org/lax:
 iiif: https://prod--iiif.elifesciences.org/lax:
