--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ autopep8==1.3.2
 boto3==1.4.4
 coverage==4.1
 et3==1.5
-git+https://github.com/elifesciences/elife-tools.git@1e6682548dd41e5168ff886d01163ccb12c78ce3#egg=elifetools
+git+https://github.com/elifesciences/elife-tools.git@c176a028e7f48455dc8bb5cd409401923769d748#egg=elifetools
 Flask==0.12.2
 Flask-Testing==0.6.2
+future==0.16.0
 green==2.9.0
 isbnlib==3.7.2
 joblib==0.11
