Switch hostname of iiif used in examples to canonical one

--- a/elife.cfg
+++ b/elife.cfg
@@ -10,7 +10,7 @@ cdn1: cdn.elifesciences.org/articles/
 #      env_for_cdn: continuumtest-
 env_for_cdn: 
 
-cdn_iiif: https://prod--cdn-iiif.elifesciences.org/lax:
+cdn_iiif: https://iiif.elifesciences.org/lax:
 iiif: https://prod--iiif.elifesciences.org/lax:
 
 [lax]
