Update IIIF prefix

--- a/elife.cfg
+++ b/elife.cfg
@@ -10,8 +10,8 @@ cdn1: cdn.elifesciences.org/articles/
 #      env_for_cdn: continuumtest-
 env_for_cdn: 
 
-cdn_iiif: https://iiif.elifesciences.org/lax:
-iiif: https://prod--iiif.elifesciences.org/lax:
+cdn_iiif: https://iiif.elifesciences.org/lax/
+iiif: https://prod--iiif.elifesciences.org/lax/
 
 [lax]
 location: /srv/lax/
