introduces 'api.pre-validate' flag that allows bot-lax article-json validation to be skipped. skipped in favour of lax doing the article-json validation.

--- a/elife.cfg
+++ b/elife.cfg
@@ -13,5 +13,8 @@ env_for_cdn:
 cdn_iiif: https://iiif.elifesciences.org/lax/
 iiif: https://prod--iiif.elifesciences.org/lax/
 
+[api]
+pre_validate: True
+
 [lax]
 location: /srv/lax/
