--- a/elife.cfg
+++ b/elife.cfg
@@ -2,7 +2,7 @@
 env: dev
 #upload_path uploads
 # lax--ci needs it's own app.cfg file
-cache_path: /home/elife
+cache_path: .
 
 cdn1: cdn.elifesciences.org/articles/
 
