removed /home/elife as the default value for the cache path conf.py will use it's own default of './cache/' instead

--- a/elife.cfg
+++ b/elife.cfg
@@ -1,8 +1,7 @@
 [general]
 env: dev
-#upload_path uploads
-# lax--ci needs it's own app.cfg file
-cache_path: /home/elife
+# upload_path:
+# cache_path: 
 
 cdn1: cdn.elifesciences.org/articles/
 
