adds ability to disable glencoe requests_cache response caching

--- a/elife.cfg
+++ b/elife.cfg
@@ -1,17 +1,23 @@
 [general]
+# "ci", "end2end"
 env: dev
-#upload_path uploads
-# lax--ci needs it's own app.cfg file
-cache_path: /home/elife
+
+# api setting. where to store XML files uploaded to the service?
+#upload_path:
+
+# path to the requests_cache sqlite database
+#cache_path: /home/elife
 
 cdn1: cdn.elifesciences.org/articles/
 
-# e.g. env_for_cdn: end2end- or
-#      env_for_cdn: continuumtest-
+# "continuumtest", "end2end"
 env_for_cdn: 
 
 cdn_iiif: https://iiif.elifesciences.org/lax/
 iiif: https://prod--iiif.elifesciences.org/lax/
+
+[glencoe]
+cache_requests: True
 
 [api]
 pre_validate: True
