reverted change to cache_path in elife.cfg

--- a/elife.cfg
+++ b/elife.cfg
@@ -6,7 +6,7 @@ env: dev
 #upload_path:
 
 # path to the requests_cache sqlite database
-#cache_path: /home/elife
+cache_path: /home/elife
 
 cdn1: cdn.elifesciences.org/articles/
 
