--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,6 @@ requests-aws==0.1.8
 requests-cache==0.4.13
 rfc3339==6.0
 strict-rfc3339==0.7
+# https://github.com/jarus/flask-testing/issues/143
+Werkzeug==0.16.1
 uWSGI==2.0.17.1
