--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 autopep8==1.4
 boto3==1.8.7
 connexion==1.5.2
-coverage==4.1
+coverage==6.2
 et3==1.5.1
-git+https://github.com/elifesciences/elife-tools.git@cf81b77f8b16970bf0f60ea47f89e4046cbfea7a#egg=elifetools
+git+https://github.com/elifesciences/elife-tools.git@fab87c9ba29085cdba3c19a6e5d8e73c19335633#egg=elifetools
 Flask==1.0.2
 Flask-Testing==0.7.1
-flex==6.13.2
+flex==6.14.1
 future==0.16.0
 isbnlib==3.9.1
 # lsh@2020-07-07: isort pinned at 4.x as 5.x breaks api
@@ -22,7 +22,7 @@ python-dateutil==2.7.3
 python-json-logger==0.1.9
 python-slugify==1.2.6
 pytz==2018.5
-PyYAML==4.2b2
+PyYAML==5.4
 requests==2.20.0
 requests-aws==0.1.8
 requests-cache==0.4.13
