--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,71 @@
-autopep8==1.4
-boto3==1.8.7
-connexion==1.5.2
-coverage==4.1
-et3==1.5.1
-git+https://github.com/elifesciences/elife-tools.git@a9e3abe1f69a5647edada71f3e94a7e204191eb5#egg=elifetools
-Flask==1.0.2
-Flask-Testing==0.7.1
+# file generated 2022-03-22 - see update-dependencies.sh
+astroid==1.6.6
+attrs==21.4.0
+autopep8==1.6.0
+beautifulsoup4==4.10.0
+boto3==1.21.23
+botocore==1.24.23
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+clickclick==20.10.2
+connexion==1.5.3
+coverage==4.5.4
+dataclasses==0.8
+elifetools @ git+https://github.com/elifesciences/elife-tools.git@a9e3abe1f69a5647edada71f3e94a7e204191eb5
+et3==1.5.2
+Flask==1.1.2
+Flask-Testing==0.8.1
 flex==6.14.1
-future==0.16.0
-isbnlib==3.9.1
-# lsh@2020-07-07: isort pinned at 4.x as 5.x breaks api
+idna==3.3
+importlib-metadata==4.8.3
+inflection==0.5.1
+isbnlib==3.10.10
 isort==4.3.21
-joblib==0.12.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+jmespath==0.10.0
+joblib==0.17.0
+jsonpointer==2.2
 jsonschema==2.6.0
-newrelic==4.2.0.100
-pyflakes==2.0.0
-pylint==1.9.3
-pytest==5.0.1
-pytest-cov==2.7.1
-python-dateutil==2.7.3
-python-json-logger==0.1.9
+lazy-object-proxy==1.7.1
+lxml==4.8.0
+MarkupSafe==2.0.1
+mccabe==0.7.0
+more-itertools==8.12.0
+newrelic==4.20.1.121
+packaging==21.3
+pluggy==0.13.1
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pylint==1.9.5
+pyparsing==3.0.7
+pytest==5.4.3
+pytest-cov==2.10.1
+python-dateutil==2.8.2
+python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2018.5
-PyYAML==5.4
-requests==2.20.0
+pytz==2022.1
+PyYAML==5.4.1
+requests==2.27.1
 requests-aws==0.1.8
-requests-cache==0.4.13
-rfc3339==6.0
+requests-cache==0.7.5
+rfc3339==6.2
+rfc3987==1.3.8
+s3transfer==0.5.2
+six==1.16.0
+soupsieve==2.3.1
 strict-rfc3339==0.7
-# https://github.com/jarus/flask-testing/issues/143
+swagger-spec-validator==2.7.4
+toml==0.10.2
+typing_extensions==4.1.1
+Unidecode==1.3.4
+url-normalize==1.4.3
+urllib3==1.26.9
+uWSGI==2.0.20
+validate-email==1.3
+wcwidth==0.2.5
 Werkzeug==0.16.1
-uWSGI==2.0.17.1
+wrapt==1.14.0
+zipp==3.6.0
