--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ python_version = "3.6"
 boto3 = "~=1.8"
 connexion = "~=1.5"
 et3 = "~=1.5"
-elifetools = {ref = "a9e3abe1f69a5647edada71f3e94a7e204191eb5", git = "https://github.com/elifesciences/elife-tools.git"}
+elifetools = "==0.15.0"
 flex = "~=6.14"
 #future = "==0.16.0"
 isbnlib = "~=3.9"
