--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-# file generated 2022-03-22 - see update-dependencies.sh
+# file generated 2022-03-25 - see update-dependencies.sh
 astroid==1.6.6
 attrs==21.4.0
 autopep8==1.6.0
 beautifulsoup4==4.10.0
-boto3==1.21.23
-botocore==1.24.23
+boto3==1.21.26
+botocore==1.24.26
 certifi==2021.10.8
 charset-normalizer==2.0.12
-click==8.0.4
+click==7.1.2
 clickclick==20.10.2
 connexion==1.5.3
 coverage==4.5.4
 dataclasses==0.8
-elifetools @ git+https://github.com/elifesciences/elife-tools.git@a9e3abe1f69a5647edada71f3e94a7e204191eb5
+elifetools==0.15.0
 et3==1.5.2
-Flask==1.1.2
+Flask==1.1.4
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.3
@@ -22,8 +22,8 @@ importlib-metadata==4.8.3
 inflection==0.5.1
 isbnlib==3.10.10
 isort==4.3.21
-itsdangerous==2.0.1
-Jinja2==3.0.3
+itsdangerous==1.1.0
+Jinja2==2.11.3
 jmespath==0.10.0
 joblib==0.17.0
 jsonpointer==2.2
@@ -50,7 +50,7 @@ pytz==2022.1
 PyYAML==5.4.1
 requests==2.27.1
 requests-aws==0.1.8
-requests-cache==0.7.5
+requests-cache==0.6.4
 rfc3339==6.2
 rfc3987==1.3.8
 s3transfer==0.5.2
