--- a/Pipfile
+++ b/Pipfile
@@ -26,7 +26,7 @@ python-slugify = "~=1.2"
 pytz = "*"
 requests = "~=2.20"
 requests-aws = "~=0.1"
-requests-cache = "~=0.4"
+requests-cache = "==0.7.*"
 rfc3339 = "~=6.0"
 #strict-rfc3339 = "==0.7"
 Flask = "~=1.0"
