replaces requests_cache with a simple fs-backed store

--- a/elife.cfg
+++ b/elife.cfg
@@ -5,7 +5,7 @@ env: dev
 # api setting. where to store XML files uploaded to the service?
 #upload_path:
 
-# path to the requests_cache sqlite database
+# path to the requests cache root
 cache_path: /home/elife
 
 cdn1: cdn.elifesciences.org/articles/
