--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# file generated 2022-04-06 - see update-dependencies.sh
+# file generated 2022-05-03 - see update-dependencies.sh
 astroid==1.6.6
 attrs==21.4.0
 autopep8==1.6.0
-beautifulsoup4==4.10.0
-boto3==1.21.34
-botocore==1.24.34
+beautifulsoup4==4.11.1
+boto3==1.22.5
+botocore==1.25.5
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==7.1.2
@@ -26,7 +26,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.3
 jmespath==0.10.0
 joblib==0.17.0
-jsonpointer==2.2
+jsonpointer==2.3
 jsonschema==2.6.0
 lazy-object-proxy==1.7.1
 lxml==4.8.0
@@ -40,7 +40,7 @@ py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
 pylint==1.9.5
-pyparsing==3.0.7
+pyparsing==3.0.8
 pytest==5.4.3
 pytest-cov==2.10.1
 python-dateutil==2.8.2
@@ -55,7 +55,7 @@ rfc3339==6.2
 rfc3987==1.3.8
 s3transfer==0.5.2
 six==1.16.0
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
 strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
 toml==0.10.2
@@ -66,5 +66,5 @@ uWSGI==2.0.20
 validate-email==1.3
 wcwidth==0.2.5
 Werkzeug==0.16.1
-wrapt==1.14.0
+wrapt==1.14.1
 zipp==3.6.0
