--- a/Pipfile
+++ b/Pipfile
@@ -44,7 +44,8 @@ autopep8 = "~=1.4"
 coverage = "~=4.1"
 newrelic = "~=4.2"
 pyflakes = "~=2.0"
-pylint = "~=1.9"
+# lsh@2022-05-04: 1.9.5 isn't available for python 3.8?
+pylint = "~=2.0"
 pytest = "~=5.0"
 pytest-cov = "~=2.7"
 Flask-Testing = "~=0.7"
