--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # file generated 2022-05-04 - see update-dependencies.sh
-astroid==1.6.6
+astroid==2.11.4
 attrs==21.4.0
 autopep8==1.6.0
 beautifulsoup4==4.11.1
@@ -12,6 +12,7 @@ clickclick==20.10.2
 connexion==1.5.3
 coverage==4.5.4
 dataclasses==0.6
+dill==0.3.4
 elifetools==0.15.0
 et3==1.5.2
 Flask==1.1.4
@@ -35,11 +36,12 @@ mccabe==0.7.0
 more-itertools==8.12.0
 newrelic==4.20.1.121
 packaging==21.3
+platformdirs==2.4.0
 pluggy==0.13.1
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==1.9.5
+pylint==2.13.8
 pyparsing==3.0.8
 pytest==5.4.3
 pytest-cov==2.10.1
@@ -59,6 +61,8 @@ soupsieve==2.3.2.post1
 strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
 toml==0.10.2
+tomli==1.2.3
+typed-ast==1.5.3
 typing_extensions==4.1.1
 Unidecode==1.3.4
 urllib3==1.26.9
