--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,48 @@
-# file generated 2022-07-04 - see update-dependencies.sh
-astroid==2.11.4
+# file generated 2022-07-08 - see update-dependencies.sh
+astroid==2.11.6
 attrs==21.4.0
 autopep8==1.6.0
 beautifulsoup4==4.11.1
-boto3==1.22.6
-botocore==1.25.6
-certifi==2021.10.8
-charset-normalizer==2.0.12
+boto3==1.24.25
+botocore==1.27.25
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==7.1.2
 clickclick==20.10.2
 connexion==1.5.3
 coverage==4.5.4
 dataclasses==0.6
-dill==0.3.4
+dill==0.3.5.1
 elifetools==0.18.0
 et3==1.5.2
 Flask==1.1.4
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.3
-importlib-metadata==4.8.3
+importlib-metadata==4.12.0
 inflection==0.5.1
 isbnlib==3.10.10
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.3
-jmespath==0.10.0
+jmespath==1.0.1
 joblib==0.17.0
 jsonpointer==2.3
 jsonschema==2.6.0
 lazy-object-proxy==1.7.1
 lxml==4.9.1
-MarkupSafe==2.0.1
+MarkupSafe==2.1.1
 mccabe==0.7.0
-more-itertools==8.12.0
+more-itertools==8.13.0
 newrelic==4.20.1.121
 packaging==21.3
-platformdirs==2.4.0
+platformdirs==2.5.2
 pluggy==0.13.1
 py==1.11.0
 pycodestyle==2.8.0
 pyflakes==2.4.0
-pylint==2.13.8
-pyparsing==3.0.8
+pylint==2.14.4
+pyparsing==3.0.9
 pytest==5.4.3
 pytest-cov==2.10.1
 python-dateutil==2.8.2
@@ -50,25 +50,26 @@ python-json-logger==0.1.11
 python-slugify==1.2.6
 pytz==2022.1
 PyYAML==5.4.1
-requests==2.27.1
+requests==2.28.1
 requests-aws==0.1.8
 requests-cache==0.4.13
 rfc3339==6.2
 rfc3987==1.3.8
-s3transfer==0.5.2
+s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 strict-rfc3339==0.7
 swagger-spec-validator==2.7.4
 toml==0.10.2
-tomli==1.2.3
+tomli==2.0.1
+tomlkit==0.11.1
 typed-ast==1.5.3
-typing_extensions==4.1.1
+typing_extensions==4.3.0
 Unidecode==1.3.4
-urllib3==1.26.9
+urllib3==1.26.10
 uWSGI==2.0.20
 validate-email==1.3
 wcwidth==0.2.5
 Werkzeug==0.16.1
 wrapt==1.14.1
-zipp==3.6.0
+zipp==3.8.0
