--- a/Pipfile
+++ b/Pipfile
@@ -17,7 +17,7 @@ isbnlib = "~=3.9"
 # lsh@2020-07-07: isort pinned at 4.x as 5.x breaks api
 isort = "~=4.3"
 # todo: revisit
-joblib = "~=0.12"
+joblib = "~=1.2"
 jsonschema = "~=2.6"
 python-dateutil = "~=2.7"
 # todo: revisit
@@ -48,8 +48,8 @@ autopep8 = "~=1.4"
 coverage = "~=4.1"
 newrelic = "~=4.2"
 pyflakes = "~=2.0"
-# lsh@2022-05-04: 1.9.5 isn't available for python 3.8?
-pylint = "~=2.0"
+# lsh@2022-10-10: pylint has broken again in 2.15.3, pinning it to patch versions of 2.14 only
+pylint = "==2.14.*"
 pytest = "~=5.0"
 pytest-cov = "~=2.7"
 Flask-Testing = "~=0.7"
