--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# file generated 2022-10-27 - see update-dependencies.sh
+# file generated 2022-10-28 - see update-dependencies.sh
 astroid==2.11.7
 attrs==22.1.0
-autopep8==1.7.0
+autopep8==1.7.1
 beautifulsoup4==4.11.1
-boto3==1.24.89
-botocore==1.27.89
+boto3==1.25.3
+botocore==1.28.3
 certifi==2022.9.24
 charset-normalizer==2.1.1
 click==7.1.2
@@ -12,16 +12,18 @@ clickclick==20.10.2
 connexion==1.5.3
 coverage==4.5.4
 dataclasses==0.6
-dill==0.3.5.1
+dill==0.3.6
 elifetools==0.26.0
 et3==1.5.2
+exceptiongroup==1.0.0
 Flask==1.1.4
 Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.4
 importlib-metadata==5.0.0
 inflection==0.5.1
-isbnlib==3.10.10
+iniconfig==1.1.1
+isbnlib==3.10.12
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.3
@@ -29,26 +31,24 @@ jmespath==1.0.1
 joblib==1.2.0
 jsonpointer==2.3
 jsonschema==2.6.0
-lazy-object-proxy==1.7.1
+lazy-object-proxy==1.8.0
 lxml==4.9.1
 MarkupSafe==2.0.1
 mccabe==0.7.0
-more-itertools==8.14.0
 newrelic==4.20.1.121
 packaging==21.3
 platformdirs==2.5.2
-pluggy==0.13.1
-py==1.11.0
+pluggy==1.0.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 pylint==2.14.5
 pyparsing==3.0.9
-pytest==5.4.3
+pytest==7.2.0
 pytest-cov==2.10.1
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
-pytz==2022.4
+pytz==2022.5
 PyYAML==5.4.1
 requests==2.28.1
 requests-aws==0.1.8
@@ -59,17 +59,14 @@ s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.3.2.post1
 strict-rfc3339==0.7
-swagger-spec-validator==2.7.6
-toml==0.10.2
+swagger-spec-validator==3.0.2
 tomli==2.0.1
-tomlkit==0.11.5
-typed-ast==1.5.3
+tomlkit==0.11.6
 typing_extensions==4.4.0
 Unidecode==1.3.6
 urllib3==1.26.12
-uWSGI==2.0.20
+uWSGI==2.0.21
 validate-email==1.3
-wcwidth==0.2.5
 Werkzeug==0.16.1
 wrapt==1.14.1
-zipp==3.9.0
+zipp==3.10.0
