--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,7 @@ isbnlib = "~=3.9"
 # lsh@2020-07-07: isort pinned at 4.x as 5.x breaks api
 isort = "~=4.3"
 joblib = "~=1.2"
-jsonschema = "~=2.6"
+jsonschema = "~=4.17"
 python-dateutil = "~=2.7"
 python-json-logger = "~=0.1.9"
 python-slugify = "~=1.2"
@@ -34,15 +34,11 @@ Werkzeug = ">=2.2.3"
 uWSGI = "~=2.0"
 
 [dev-packages]
-# lsh@2022-03-14: greater versions not available for python3.8.
-# remove once using python3.8 exclusively
-dataclasses = "<=0.6"
-autopep8 = "~=1.4"
-coverage = "~=4.1"
-newrelic = "~=4.2"
-pyflakes = "~=2.0"
-# lsh@2022-10-10: pylint has broken again in 2.15.3, pinning it to patch versions of 2.14 only
-pylint = "==2.14.*"
+autopep8 = "~=2.0"
+coverage = "~=7.2"
+newrelic = "~=8.7"
+pyflakes = "~=3.0"
+pylint = "~=2.16"
 pytest = "~=7.2"
-pytest-cov = "~=2.7"
-Flask-Testing = "~=0.7"
+pytest-cov = "*"
+Flask-Testing = "*"
