--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
-# file generated 2023-02-20 - see update-dependencies.sh
-astroid==2.11.7
+# file generated 2023-03-01 - see update-dependencies.sh
+astroid==2.14.2
 attrs==22.2.0
-autopep8==1.7.0
+autopep8==2.0.1
 beautifulsoup4==4.11.2
-boto3==1.26.73
-botocore==1.29.73
+boto3==1.26.81
+botocore==1.29.81
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 clickclick==20.10.2
 connexion==2.14.2
-coverage==4.5.4
-dataclasses==0.6
+coverage==7.2.1
 dill==0.3.6
 elifetools==0.32.0
 et3==1.5.2
@@ -21,6 +20,7 @@ Flask-Testing==0.8.1
 flex==6.14.1
 idna==3.4
 importlib-metadata==6.0.0
+importlib-resources==5.12.0
 inflection==0.5.1
 iniconfig==2.0.0
 isbnlib==3.10.13
@@ -30,20 +30,22 @@ Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.2.0
 jsonpointer==2.3
-jsonschema==2.6.0
+jsonschema==4.17.3
 lazy-object-proxy==1.9.0
 lxml==4.9.2
 MarkupSafe==2.1.2
 mccabe==0.7.0
-newrelic==4.20.1.121
+newrelic==8.7.0
 packaging==23.0
+pkgutil_resolve_name==1.3.10
 platformdirs==3.0.0
 pluggy==1.0.0
 pycodestyle==2.10.0
-pyflakes==2.5.0
-pylint==2.14.5
+pyflakes==3.0.1
+pylint==2.16.2
+pyrsistent==0.19.3
 pytest==7.2.1
-pytest-cov==2.10.1
+pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-json-logger==0.1.11
 python-slugify==1.2.6
@@ -58,7 +60,6 @@ s3transfer==0.6.0
 six==1.16.0
 soupsieve==2.4
 strict-rfc3339==0.7
-toml==0.10.2
 tomli==2.0.1
 tomlkit==0.11.6
 typing_extensions==4.5.0
@@ -67,5 +68,5 @@ urllib3==1.26.14
 uWSGI==2.0.21
 validate-email==1.3
 Werkzeug==2.2.3
-wrapt==1.14.1
-zipp==3.13.0
+wrapt==1.15.0
+zipp==3.15.0
