--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# file generated 2023-03-01 - see update-dependencies.sh
-astroid==2.14.2
+# file generated 2023-03-06 - see update-dependencies.sh
+astroid==2.15.0
 attrs==22.2.0
-autopep8==2.0.1
+autopep8==2.0.2
 beautifulsoup4==4.11.2
-boto3==1.26.81
-botocore==1.29.81
+boto3==1.26.84
+botocore==1.29.84
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -33,20 +33,20 @@ mccabe==0.7.0
 newrelic==8.7.0
 packaging==23.0
 pkgutil_resolve_name==1.3.10
-platformdirs==3.0.0
+platformdirs==3.1.0
 pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
-pylint==2.16.2
+pylint==2.16.3
 pyrsistent==0.19.3
-pytest==7.2.1
+pytest==7.2.2
 pytest-cov==4.0.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==1.2.6
 pytz==2022.7.1
 requests==2.28.2
-requests-aws==0.1.8
+requests-aws4auth==1.2.2
 requests-cache==0.5.2
 rfc3339==6.2
 s3transfer==0.6.0
