--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,8 @@ et3 = "~=1.5"
 elifetools = "==0.32.0"
 isbnlib = "~=3.9"
 joblib = "~=1.2"
-jsonschema = "~=4.17"
+# lsh@2023-07-26: pinned to 4.17, not semver, breaking changes introduced in 4.18
+jsonschema = "==4.17.*"
 python-json-logger = "~=2.0"
 python-slugify = "~=1.2"
 pytz = "*"
