--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.1
-jsonschema==4.18.4
-jsonschema-specifications==2023.7.1
+jsonschema==4.17.3
 lazy-object-proxy==1.9.0
 lxml==4.9.3
 MarkupSafe==2.1.3
@@ -39,18 +38,17 @@ pluggy==1.2.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 pylint==2.17.4
+pyrsistent==0.19.3
 pytest==7.4.0
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==1.2.6
 pytz==2023.3
-referencing==0.30.0
 requests==2.31.0
 requests-aws4auth==1.2.3
 requests-cache==0.5.2
 rfc3339==6.2
-rpds-py==0.9.2
 s3transfer==0.6.1
 six==1.16.0
 soupsieve==2.4.1
