--- a/elife.cfg
+++ b/elife.cfg
@@ -20,6 +20,12 @@ iiif: https://prod--iiif.elifesciences.org/lax/
 cache_requests: True
 
 [api]
+# hostname of the api gateway to talk to. 
+# use 'elife.internal' for deployments.
+host: elifesciences.org
+# full URL to the preferred api gateway.
+# overrides the URL built from `general.env` and `api.host` if set.
+url:
 pre_validate: True
 
 [lax]
