--- a/elife.cfg
+++ b/elife.cfg
@@ -3,15 +3,17 @@
 env: dev
 
 # api setting. where to store XML files uploaded to the service?
+# default: /path/to/bot-lax-adaptor/uploads/
 #upload_path:
 
 # path to the requests_cache sqlite database
+# default: /path/to/bot-lax-adaptor/cache/
 cache_path: /home/elife
 
 cdn1: cdn.elifesciences.org/articles/
 
 # "continuumtest", "end2end"
-env_for_cdn: 
+env_for_cdn:
 
 cdn_iiif: https://iiif.elifesciences.org/lax/
 iiif: https://prod--iiif.elifesciences.org/lax/
