--- a/Pipfile
+++ b/Pipfile
@@ -23,7 +23,8 @@ requests = "~=2.20"
 requests-aws4auth = "~=1.2"
 # pinned, dependency is unstable and breaks in higher versions.
 requests-cache = "==0.5.2"
-rfc3339 = "~=6.0"
+# lsh@2023-09-05: vendored. todo: shift unittest and tests to separate file and offer up a patch.
+#rfc3339 = "~=6.0"
 uWSGI = "~=2.0"
 
 [dev-packages]
