--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# file generated 2023-08-25 - see update-dependencies.sh
+# file generated 2023-09-05 - see update-dependencies.sh
 astroid==2.15.6
 attrs==23.1.0
-autopep8==2.0.2
+autopep8==2.0.4
 beautifulsoup4==4.12.2
-boto3==1.28.34
-botocore==1.31.34
+boto3==1.28.40
+botocore==1.31.40
 certifi==2023.7.22
 charset-normalizer==3.2.0
 click==8.1.7
@@ -34,24 +34,23 @@ newrelic==8.11.0
 packaging==23.1
 pkgutil_resolve_name==1.3.10
 platformdirs==3.10.0
-pluggy==1.2.0
+pluggy==1.3.0
 pycodestyle==2.11.0
 pyflakes==3.1.0
 pylint==2.17.5
 pyrsistent==0.19.3
-pytest==7.4.0
+pytest==7.4.1
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 python-slugify==1.2.6
-pytz==2023.3
+pytz==2023.3.post1
 requests==2.31.0
 requests-aws4auth==1.2.3
 requests-cache==0.5.2
-rfc3339==6.2
 s3transfer==0.6.2
 six==1.16.0
-soupsieve==2.4.1
+soupsieve==2.5
 tomli==2.0.1
 tomlkit==0.12.1
 typing_extensions==4.7.1
