--- a/.coveragerc
+++ b/.coveragerc
@@ -1,6 +1,7 @@
 [run]
 # whether to measure branch coverage in addition to statement coverage.
 branch = true
+omit = src/vendor/*
 
 [report]
 show_missing = false
