--- a/elife.cfg
+++ b/elife.cfg
@@ -26,7 +26,8 @@ cache_requests: True
 # use 'elife.internal' for deployments.
 host: elifesciences.org
 # full URL to the preferred api gateway.
-# overrides the URL built from `general.env` and `api.host` if set.
+# overrides the URL built from `general.env` and `api.host` (above) if set.
+# for example, if you need to pull from prod while in dev.
 url:
 pre_validate: True
 
