support related reviewed preprints (#967)
* scrape-article.sh, fails earlier if given path not found.
* main.py, detects and attaches any related reviewed-preprints.
* elife.cfg, adds 'api.host' and 'api.url' fields.
  api.host is used in building an api.url value, 'api.url' explicitly overrides that.
  good if you want to talk to prod gateway in dev. leave empty by default.
* generate_article_json.py, config dump using json now uses str as fallback for unserialisable values.
* removes python2 unicode strings
* adds a 'scrape-many-articles.sh' script.
  it reads filenames from a text file and scrapes them to article-json.
  complements the 'scrape-article.sh' and 'generate-article-json.sh' scripts.
  cribbed from the 'backfill-many.sh' script.
* main.py, only hits 'references_json' as necessary for detecting a rpp. 
  multiple accesses modifies the soup and produces strange errors.
* revewed-preprints, results from api no longer json-schema validated
  too time expensive.
* deps, vendored rfc3339 because it imports unittest directly
  this issues a warning in nuitka and is also expensive to load for per-article scrapes.
* .coveragerc, ignore everything in vendors dir

--- a/elife.cfg
+++ b/elife.cfg
@@ -3,15 +3,17 @@
 env: dev
 
 # api setting. where to store XML files uploaded to the service?
+# default: /path/to/bot-lax-adaptor/uploads/
 #upload_path:
 
 # path to the requests_cache sqlite database
+# default: /path/to/bot-lax-adaptor/cache/
 cache_path: /home/elife
 
 cdn1: cdn.elifesciences.org/articles/
 
 # "continuumtest", "end2end"
-env_for_cdn: 
+env_for_cdn:
 
 cdn_iiif: https://iiif.elifesciences.org/lax/
 iiif: https://prod--iiif.elifesciences.org/lax/
@@ -20,6 +22,13 @@ iiif: https://prod--iiif.elifesciences.org/lax/
 cache_requests: True
 
 [api]
+# hostname of the api gateway to talk to. 
+# use 'elife.internal' for deployments.
+host: elifesciences.org
+# full URL to the preferred api gateway.
+# overrides the URL built from `general.env` and `api.host` (above) if set.
+# for example, if you need to pull from prod while in dev.
+url:
 pre_validate: True
 
 [lax]
