conf, remove 'api-host' magic in favour of explicit 'api-url'

--- a/elife.cfg
+++ b/elife.cfg
@@ -18,13 +18,8 @@ iiif: https://prod--iiif.elifesciences.org/lax/
 cache_requests: True
 
 [api]
-# hostname of the api gateway to talk to. 
-# use 'elife.internal' for deployments.
-host: elifesciences.org
-# full URL to the preferred api gateway.
-# overrides the URL built from `general.env` and `api.host` (above) if set.
-# for example, if you need to pull from prod while in dev.
-url:
+# full URL to the api gateway to talk to.
+url: https://api.elifesciences.org
 
 [lax]
 location: /srv/lax/
