adds compile.sh, a script to compile bot-lax-adaptor using nuitka

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-# file generated 2023-11-18 - see update-dependencies.sh
+# file generated 2023-11-20 - see update-dependencies.sh
 astroid==2.15.8
 attrs==23.1.0
 autopep8==2.0.4
 beautifulsoup4==4.12.2
-boto3==1.28.67
-botocore==1.31.67
-certifi==2023.7.22
-charset-normalizer==3.3.0
+boto3==1.29.3
+botocore==1.32.3
+certifi==2023.11.17
+charset-normalizer==3.3.2
 coverage==7.3.2
 dill==0.3.7
 elifetools==0.38.0
 et3==1.5.2
 exceptiongroup==1.1.3
 idna==3.4
-importlib-resources==6.1.0
+importlib-resources==6.1.1
 iniconfig==2.0.0
 isbnlib==3.10.14
 isort==5.12.0
@@ -23,15 +23,17 @@ jsonschema==4.17.3
 lazy-object-proxy==1.9.0
 lxml==4.9.3
 mccabe==0.7.0
+Nuitka==1.8.6
+ordered-set==4.1.0
 packaging==23.2
 pkgutil_resolve_name==1.3.10
-platformdirs==3.11.0
+platformdirs==4.0.0
 pluggy==1.3.0
 pycodestyle==2.11.1
 pyflakes==3.1.0
 pylint==2.17.7
-pyrsistent==0.19.3
-pytest==7.4.2
+pyrsistent==0.20.0
+pytest==7.4.3
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 python-json-logger==2.0.7
@@ -44,9 +46,10 @@ s3transfer==0.7.0
 six==1.16.0
 soupsieve==2.5
 tomli==2.0.1
-tomlkit==0.12.1
+tomlkit==0.12.3
 typing_extensions==4.8.0
 Unidecode==1.3.7
 urllib3==1.26.18
-wrapt==1.15.0
+wrapt==1.16.0
 zipp==3.17.0
+zstandard==0.22.0
