--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ requests-cache = "==0.5.2"
 [dev-packages]
 autopep8 = "~=2.0"
 coverage = "~=7.2"
+nuitka = "*"
 pyflakes = "~=3.0"
 pylint = "~=2.16"
 pytest = "~=7.2"
