--- a/.coveragerc
+++ b/.coveragerc
@@ -1,10 +1,17 @@
 [run]
 # whether to measure branch coverage in addition to statement coverage.
 branch = true
-omit = src/vendor/*
+omit = 
+    src/vendor/*
 
 [report]
 show_missing = false
 precision = 0
 exclude_lines =
     if __name__ == .__main__.:
+omit = 
+    src/manage.py
+    src/validate_article_json.py
+    src/generate_article_json.py
+    src/backfill-many.py
+    src/download.py
