--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,10 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.8'
+      - name: create config and fix paths
+        run: |
+          cp elife.cfg app.cfg
+          cat app.cfg | sed 's|/home/elife|./var|g' | tee app.cfg
       - name: Project tests
         run: |
           ./project_tests.sh
