Configure info URL to use uncached production IIIF server
https://github.com/elifesciences/issues/issues/9340

--- a/elife.cfg
+++ b/elife.cfg
@@ -12,7 +12,7 @@ cdn1: cdn.elifesciences.org/articles/
 env_for_cdn:
 
 cdn_iiif: https://iiif.elifesciences.org/lax/
-iiif: https://prod--iiif.elifesciences.org/lax/
+iiif: https://iiif.prod.elifesciences.org/lax/
 
 [glencoe]
 cache_requests: True
